--- a/chainquest-api/.env
+++ b/chainquest-api/.env
@@ -1,3 +1,3 @@
 RPC_URL=https://localhost:7545
-QUEST_MANAGER_ADDRESS=
-ADVENTURER_NFT_ADDRESS=
+QUEST_MANAGER_ADDRESS=0x7AD34FB994A971CBdC9F8F43C9Dc836605D4bB8d
+ADVENTURER_NFT_ADDRESS=0x7AD34FB994A971CBdC9F8F43C9Dc836605D4bB8d
