--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "@tailwindcss/vite": "^4.1.11",
     "ethers": "^6.15.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11",
     "viem": "^2.33.1",
     "wagmi": "^2.16.0"
