--- a/chainquest-api/.env
+++ b/chainquest-api/.env
@@ -1,3 +1,3 @@
-RPC_URL=https://localhost:7545
-QUEST_MANAGER_ADDRESS=0x7AD34FB994A971CBdC9F8F43C9Dc836605D4bB8d
-ADVENTURER_NFT_ADDRESS=0x7AD34FB994A971CBdC9F8F43C9Dc836605D4bB8d
+RPC_URL=HTTP://127.0.0.1:7545
+QUEST_MANAGER_ADDRESS=0x476b34741E62BCec47364A2676c302A4A86AF0Aa
+ADVENTURER_NFT_ADDRESS=0xe9f034A897569A183890490ddd9B612407149D27
