--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11",
     "viem": "^2.33.1",
-    "wagmi": "^2.16.0"
+    "wagmi": "^2.9.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
